--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 apply plugin: 'kotlin-android'
@@ -51,6 +52,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     //Room
     implementation 'androidx.room:room-runtime:2.2.6'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
     kapt 'androidx.room:room-compiler:2.2.6'
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
